--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="lib" path="tools/selenium/selenium-java-2.25.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ArhiXML/doc/dev/selenium-java-2.25.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="tools/selenium/lib/httpclient-4.1.3.jar"/>
+	<classpathentry kind="lib" path="tools/selenium/lib/commons-exec-1.1.jar"/>
+	<classpathentry kind="lib" path="tools/selenium/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="tools/selenium/lib/guava-12.0.jar"/>
+	<classpathentry kind="lib" path="tools/selenium/lib/httpcore-4.1.3.jar"/>
+	<classpathentry kind="lib" path="tools/selenium/lib/json-20080701.jar"/>
 	<classpathentry kind="var" path="VAADIN_DOWNLOAD/gwt-dependencies/2.3.0/validation-api-1.0.0.GA-sources.jar"/>
 	<classpathentry kind="var" path="VAADIN_DOWNLOAD/gwt-dependencies/2.3.0/validation-api-1.0.0.GA.jar"/>
 	<classpathentry kind="var" path="VAADIN_DOWNLOAD/gwt-user/2.3.0/gwt-user.jar"/>
 	<classpathentry kind="var" path="VAADIN_DOWNLOAD/gwt-dev/2.3.0/gwt-dev.jar"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre6">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -17,7 +29,16 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="tools/jetty/jetty-all-8.1.7.v20120910.jar"/>
+	<classpathentry kind="lib" path="tools/jetty/jetty-all-8.1.7.v20120910.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ArhiXML/doc/dev/jetty-all-8.1.7.v20120910-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="tools/jetty/servlet-api-3.0.jar"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="lib" path="tools/junit/junit-4.10.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/ArhiXML/doc/dev/junit-4.10-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
