--- a/build.xml
+++ b/build.xml
@@ -25,14 +25,15 @@
 			</fileset>
 		</path>
 
-		<javac includeantruntime="false" srcdir="src" destdir="WebContent/WEB-INF/classes" classpathref="compile.class.path" />
+		<javac includeantruntime="false" srcdir="src" destdir="build" classpathref="compile.class.path" debug="on" />
 
-		<move file="WebContent/WEB-INF/classes/EmbeddedServerLauncher.class" todir="build" />
+		<!--move file="WebContent/WEB-INF/classes/EmbeddedServerLauncher.class" todir="build" /-->
 
 		<copy todir="WebContent/WEB-INF/classes">
 			<fileset dir="src">
 				<exclude name="**/*.java" />
 			</fileset>
+			<fileset dir="build"/>
 		</copy>
 	</target>
 
